style: color transparent to fix subject bubble on mobile devices

--- a/front-end/src/theme/variables.scss
+++ b/front-end/src/theme/variables.scss
@@ -73,6 +73,13 @@
   --ion-color-ideaToolbar-shade: #202226;
   --ion-color-ideaToolbar-tint: #2d2f33;
 
+  --ion-color-transparent: transparent;
+  --ion-color-transparent-rgb: 255, 255, 255;
+  --ion-color-transparent-contrast: #40474c;
+  --ion-color-transparent-contrast-rgb: 64, 71, 76;
+  --ion-color-transparent-shade: transparent;
+  --ion-color-transparent-tint: transparent;
+
   --ion-color-white: white;
   --ion-color-white-rgb: 255, 255, 255;
   --ion-color-white-contrast: #40474c;
@@ -215,6 +222,13 @@
     --ion-color-ideaToolbar-contrast-rgb: 255, 255, 255;
     --ion-color-ideaToolbar-shade: #080808;
     --ion-color-ideaToolbar-tint: #222;
+
+    --ion-color-transparent: transparent;
+    --ion-color-transparent-rgb: 0, 0, 0;
+    --ion-color-transparent-contrast: #cccccc;
+    --ion-color-transparent-contrast-rgb: 204, 204, 204;
+    --ion-color-transparent-shade: transparent;
+    --ion-color-transparent-tint: transparent;
   }
 
   /*
